# agentlens

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements-dev.txt  setup.py
.github/workflows/: ci.yml
agentlens/: __init__.py  audit.py  report.py
examples/: quickstart.py
tests/: conftest.py  test_audit.py  test_report.py
